<resources>
    <string name="backup_wallet">Backup funds</string>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="current_price_btc">1 BTC = %1$s</string>
    <string name="app_name">Blockchain</string>
    <string name="action_settings">Settings</string>
    <string name="all_accounts">All Wallets</string>
    <string name="please_wait">Please wait</string>
    <string name="send_bitcoin">Send</string>
    <string name="receive_bitcoin">Request</string>
    <string name="overview">Transactions</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polite_no">No thanks</string>
    <string name="done">Done</string>
    <string name="YESTERDAY">Yesterday</string>
    <string name="SENT">Sent</string>
    <string name="sending">Sending</string>
    <string name="RECEIVED">Received</string>
    <string name="receiving">Receiving</string>
    <string name="MOVED">Transferred</string>
    <string name="paid">Paid</string>
    <string name="payment_request">Payment Request</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="ask_you_sure_unpair">Are you sure you want to unpair your device?</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_units">Bitcoin Unit</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Please enter more than 3 characters</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your new password</string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.</string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please pair device again.</string>
    <string name="change_pin_new_matches_current">You can\'t use your current PIN as your new PIN</string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="account_locked_message">Your account has been locked temporarily as a precaution. Please check your email for more information and try again later.</string>
    <string name="check_connectivity_exit">Blockchain Wallet cannot obtain an Internet connection. Please check the connectivity on your device and try again.</string>
    <string name="dialog_continue">Continue</string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="command2">Scan pairing code</string>
    <string name="command3">I can\'t access my camera</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="log_in">Log in</string>
    <string name="pair_your_wallet">Pair Your Wallet</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Go to Settings / Wallet Information.</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black &amp; white barcode. Scan the code with your camera.</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="default_wallet_name">My Bitcoin Wallet</string>
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you like to continue?</string>
    <string name="recover_funds_instructions">Enter your 12 backup words with spaces to recover your funds &amp; transactions</string>
    <string name="recovery_passphrase">Backup phrase</string>
    <string name="invalid_recovery_phrase">Invalid backup phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="restoring_wallet">Restoring wallet.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="agree_terms_of_service">By creating a new wallet you agree to the</string>
    <string name="blockchain_tos">Blockchain Terms of Service</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>
    <string name="CONTINUE">Continue</string>
    <string name="SEND">SEND</string>
    <string name="total">Total</string>
    <string name="max_available">Use total available minus fee:</string>
    <string name="invalid_bitcoin_address">Invalid Bitcoin address</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="enter_double_encryption_pw">Please enter double encryption password</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="licenses">Licenses</string>
    <string name="email_chooser">Send e-mail…</string>
    <string name="about">Blockchain Wallet %1$s\n©%2$s Blockchain Luxembourg S.A.\nAll rights reserved.</string>
    <string name="merchant_download">Free Merchant app</string>
    <string name="password_or_wipe">Enter using your password or forget this wallet</string>
    <string name="use_password">Use password</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="support_leaving_app_warning">This will leave the app and take you to your browser. Continue?</string>
    <string name="select_units">Select BTC units</string>
    <string name="weak_password">The selected password is too weak to secure your funds. We strongly suggest you select a different one. Would you like to define a new password?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm_details">Confirm Payment</string>
    <string name="fee">Fee</string>
    <string name="exit_confirm">Press back button again to exit</string>
    <string name="label_address">Your address has been imported successfully. Optionally assign a friendly display name to this address.</string>
    <string name="label_address2">Your address has been created successfully. Optionally assign a friendly display name to this address.</string>
    <string name="bip38_error">Invalid private key password</string>
    <string name="privkey_error">Unrecognized private key format</string>
    <string name="hd_error">HD wallet error</string>
    <string name="scan_not_recognized">Scan cannot be decoded</string>
    <string name="imported_addresses">Imported Addresses</string>
    <string name="remote_save_ok">Successfully saved</string>
    <string name="remote_save_ko">Save unsuccessful</string>
    <string name="unpair_wallet">Unpair Wallet</string>
    <string name="unpair">UNPAIR</string>
    <string name="ok_cap">OK</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="enter_current_pin">Please enter current PIN.</string>
    <string name="disable_root_warning">Disable rooted device warning</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_funds">Transfer Imported Addresses?</string>
    <string name="transfer_recommend">Looks like you have some bitcoins in imported addresses. Imported addresses are not backed up by your Backup Phrase. To secure these funds, we recommend transferring these balances to include in your backup.</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="not_now">Not now</string>
    <string name="logout">Logout</string>
    <string name="mobile">Mobile</string>
    <string name="profile">Profile</string>
    <string name="app">App</string>
    <string name="security">Security</string>
    <string name="enable_fingerprint">Fingerprint Unlock</string>
    <string name="two_fa">2-step Verification</string>
    <string name="tor_requests">Block Tor Requests</string>
    <string name="enable_screenshots">Enable Screenshots</string>
    <string name="change_password">Change Password</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="backup_header">Backup Phrase</string>
    <string name="backup_explanation">For your security, Blockchain does not keep any passwords on file. The following 12 word Backup Phrase will give you access to your funds in case you lose your password. Be sure to write it on a piece of paper and to keep it somewhere safe and secure. </string>
    <string name="backup_button_start">Start backup</string>
    <string name="fingerprint_login_title">Fingerprint login</string>
    <string name="shortcut_settings_summary">Reveal a receive address when you long-press on the app icon in the launcher, making receiving bitcoin even faster.</string>
    <string name="shortcut_settings_enable">Launcher Shortcuts</string>
    <string name="contacts_sharing_method_header">How would you like to share this invite?</string>
    <string name="contacts_share_qr">Via QR code (in-person)</string>
    <string name="contacts_share_link">Using a link</string>
    <string name="contacts_detail_title">I want to:</string>
    <string name="contacts_detail_transactions">Transactions with %1$s:</string>
    <string name="contacts_detail_transactions_empty">No transactions yet</string>
    <string name="contacts_rename">Rename contact</string>
    <string name="contacts_delete">Delete contact</string>
    <string name="contacts_send_bitcoin">Ask to send %1$s bitcoin</string>
    <string name="contacts_request_bitcoin">Request bitcoin from %1$s</string>
    <string name="transactions">Transactions</string>
    <string name="swipe_receive_hint">Swipe to receive</string>
    <string name="swipe_receive_preference_summary">Reveal a receive address when you swipe left on the PIN screen, making receiving funds even faster.</string>
    <string name="onboarding_complete_later">I\'ll do this later</string>
    <string name="onboarding_check_inbox_title">Check Your Inbox</string>
    <string name="onboarding_check_inbox_summary">Look for an email from Blockchain and click the verification link to complete your wallet setup.</string>
    <string name="onboarding_verify_email">Verify email</string>
</resources>