<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory
        android:key="profile"
        android:title="@string/profile">
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="guid"
            android:title="@string/options_id" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="email"
            android:title="@string/email" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="mobile"
            android:title="@string/mobile" />
    </piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory>

    <piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory
        android:key="preferences"
        android:title="@string/preferences">
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="units"
            android:title="@string/options_units" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="fiat"
            android:title="@string/options_currency" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:key="email_notifications"
            android:title="@string/email_notifications" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:key="sms_notifications"
            android:title="@string/sms_notifications" />
    </piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory>

    <piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory
        android:key="security"
        android:title="@string/security">
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:key="fingerprint"
            android:title="@string/enable_fingerprint" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="pin"
            android:title="@string/change_pin_code" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:key="2fa"
            android:title="@string/two_fa" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="change_pw"
            android:title="@string/change_password" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="pw_hint1"
            android:title="@string/password_hint" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:key="tor"
            android:title="@string/tor_requests" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="screenshots_enabled"
            android:persistent="true"
            android:title="@string/enable_screenshots" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="receive_shortcuts_enabled"
            android:persistent="true"
            android:summary="@string/shortcut_settings_summary"
            android:title="@string/shortcut_settings_enable" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="swipe_to_receive_enabled"
            android:persistent="true"
            android:summary="@string/swipe_receive_preference_summary"
            android:title="@string/swipe_receive_hint" />
    </piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory>

    <piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory
        android:key="app"
        android:title="@string/app">
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="about"
            android:title="@string/preferences_about_title" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="tos"
            android:title="@string/options_tos" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomPreference
            android:key="privacy"
            android:title="@string/options_privacy" />
        <piuk.blockchain.android.ui.settings.customprefs.CustomCheckBoxPreference
            android:key="disable_root_warning"
            android:title="@string/disable_root_warning" />
    </piuk.blockchain.android.ui.settings.customprefs.CustomPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
