<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blockchain_pearl_white"
    app:bbn_itemColorActive="@color/blockchain_blue"
    app:bbn_itemColorInactive="@color/blockchain_grey"
    app:bbn_rippleColor="@color/blockchain_transfer_blue">

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/icon_send"
        android:title="@string/send_bitcoin" />
    <item
        android:id="@+id/action_transactions"
        android:icon="@drawable/vector_transactions"
        android:title="@string/transactions" />
    <item
        android:id="@+id/action_receive"
        android:icon="@drawable/icon_receive"
        android:title="@string/receive_bitcoin" />
</menu>