<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        activeColor="@color/blockchain_blue"
        barColorWhenSelected="@color/blockchain_pearl_white"
        icon="@drawable/vector_send"
        id="@+id/action_send"
        inActiveColor="@color/blockchain_grey"
        title="@string/send_bitcoin" />
    <tab
        activeColor="@color/blockchain_blue"
        barColorWhenSelected="@color/blockchain_pearl_white"
        icon="@drawable/vector_transactions"
        id="@+id/action_transactions"
        inActiveColor="@color/blockchain_grey"
        title="@string/transactions" />
    <tab
        activeColor="@color/blockchain_blue"
        barColorWhenSelected="@color/blockchain_pearl_white"
        icon="@drawable/vector_receive"
        id="@+id/action_receive"
        inActiveColor="@color/blockchain_grey"
        title="@string/receive_bitcoin" />
</tabs>