<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blockchain_pearl_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_funds" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/transfer_recommend"
                android:textColor="@color/black" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/confirm_dont_ask_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center|left"
            android:text="@string/dont_ask_again"
            android:textColor="@color/black" />

        <LinearLayout style="@style/CustomDialogButtonContainer">

            <Button
                android:id="@+id/confirm_cancel"
                style="@style/CustomDialogButton"
                android:text="@string/not_now"
                android:textColor="@color/primary_gray_dark" />

            <Button
                android:id="@+id/confirm_send"
                style="@style/CustomDialogButton"
                android:text="@string/transfer"
                android:textColor="@color/primary_blue_accent" />

        </LinearLayout>
    </LinearLayout>
</layout>