<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="piuk.blockchain.android.ui.contacts.ContactDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_general" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/ContactsHeader"
            android:text="@string/contacts_detail_title" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/contacts_send_bitcoin"
            app:theme="@style/ButtonBlue" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/contacts_request_bitcoin"
            app:theme="@style/ButtonBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/contacts_rename"
                app:theme="@style/ButtonBlue" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/contacts_delete"
                app:theme="@style/ButtonBlue" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_transaction_list_header"
            style="@style/ContactsHeader"
            android:text="@string/contacts_detail_transactions" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_balance" />


    </LinearLayout>
</layout>
