<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="piuk.blockchain.android.ui.contacts.detail.ContactDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/ContactsHeader"
            android:text="@string/contacts_detail_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_rename"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/contacts_rename"
                android:theme="@style/ButtonLightBlueTheme" />

            <Button
                android:id="@+id/button_delete"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/contacts_delete"
                android:theme="@style/ButtonRedTheme" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_transaction_list_header"
            style="@style/ContactsHeader"
            android:text="@string/contacts_detail_transactions" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:listitem="@layout/item_balance" />

        <RelativeLayout
            android:id="@+id/layout_no_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/ContactsDetail"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/contacts_detail_transactions_empty" />

        </RelativeLayout>
    </LinearLayout>
</layout>
