<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/ContactsHeader"
            android:padding="0dp"
            android:text="@string/contacts_sharing_method_header" />

        <Button
            android:id="@+id/button_qr"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/contacts_share_qr"
            android:theme="@style/ButtonBlueTheme" />

        <Button
            android:id="@+id/button_link"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/contacts_share_link"
            android:theme="@style/ButtonBlueTheme" />

        <Button
            android:id="@+id/button_done"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/done"
            android:theme="@style/ButtonBlueTheme" />

    </LinearLayout>
</layout>
